# nvim_winpick

./: .gitignore  Cargo.toml  Install.md  Readme.md  Todo.md  build.lua  deny.toml
.cargo/: config.toml
.github/: publish-prebuilt-fresh.sh  publish-prebuilt.sh
.github/workflows/: publish.yml  validate.yml
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  opts.rs
lua/nvim_winpick/: Cargo.toml
lua/nvim_winpick/.cargo/: config.toml
lua/nvim_winpick/integration-tests/: Cargo.toml
lua/nvim_winpick/nvim-winpick-core/: Cargo.toml
lua/nvim_winpick/nvim-winpick-core/src/: chars.rs  filter.rs  lib.rs  opts.rs  pick.rs  win.rs
lua/nvim_winpick/nvim-winpick-core/src/pick/: simple_open.rs  simple_operations.rs  win_relative.rs
lua/nvim_winpick/nvim_winpick/: Cargo.toml
lua/nvim_winpick/nvim_winpick/src/: lib.rs
nvim-winpick-core/: Cargo.toml
nvim-winpick-core/src/: buf.rs  chars.rs  ctx.rs  draw.rs  filter.rs  geometry.rs  hint.rs  notify.rs  opts.rs  pick.rs  win.rs
nvim-winpick-core/src/pick/: simple_operations.rs  win_relative.rs
nvim_winpick/: Cargo.toml
