[workspace]
members = [ "integration-tests", "nvim-winpick-core","nvim_winpick"]
resolver = "2"

[workspace.dependencies]
# Internal
nvim-winpick-core = { path = "./nvim-winpick-core/" }
# External
anyhow = "1.0.96"
nvim-oxi = { version = "0.6.0", features = ["neovim-0-10", "neovim-0-11"] }
serde = "1.0.218"

[workspace.lints.clippy]
pedantic = {priority = -1, level = "warn"}
module_name_repetitions = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
